<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Planty</string>
    
    <!-- Login related strings -->
    <string name="hint_id">아이디를 입력해주세요.</string>
    <string name="hint_password">비밀번호를 입력해주세요.</string>
    <string name="button_login">로그인</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="button_signup">회원가입</string>
    <string name="social_login_label"> 또는 </string>
    <string name="google_login">Google 로그인</string>
    <string name="kakao_login">Kakao 로그인</string>
    <string name="naver_login">Naver 로그인</string>
    <string name="plant_image_description">식물 이미지</string>
    <string name="login_failed">아이디 또는 비밀번호가 틀렸습니다.</string>
    <string name="login_button_clicked">로그인 버튼 클릭됨</string>
    <string name="signup_button_clicked">회원가입 버튼 클릭됨</string>
    <string name="forgot_password_clicked">비밀번호 찾기 클릭됨</string>
    <string name="google_login_clicked">Google 로그인 클릭됨</string>
    <string name="kakao_login_clicked">Kakao 로그인 클릭됨</string>
    <string name="naver_login_clicked">Naver 로그인 클릭됨</string>

    <!-- Signup related strings -->
    <string name="hint_nickname">별명을 입력해주세요.</string>
    <string name="hint_id_signup">사용할 아이디를 입력해주세요.</string>
    <string name="hint_password_signup">비밀번호를 입력해주세요.</string>
    <string name="hint_password_confirm">비밀번호를 다시 입력해주세요.</string>
    <string name="hint_email">이메일 주소를 입력해주세요.</string>
    <string name="button_signup_action">가입하기</string>
    <string name="error_empty_field">필수 입력 항목입니다.</string>
    <string name="error_password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="error_invalid_email">올바른 이메일 형식이 아닙니다.</string>
    <string name="signup_success">회원가입 성공! (API 연동 필요)</string>
    <string name="signup_failed">회원가입 실패 (API 연동 필요)</string>
    
    <!-- Plant registration related strings -->
    <string name="welcome_plant_registration">%1$s님, 지금 키우고 있는 식물을 알려주세요</string>
    <string name="hint_plant_type">식물 종류 (예: 토마토, 몬스테라)</string>
    <string name="hint_plant_nickname">식물 별명</string>
    <string name="hint_plant_start_date">키우기 시작한 날짜</string>
    <string name="button_register_plant">등록하기</string>
    <string name="plant_registration_success">식물 등록 성공! (API 연동 필요)</string>
    <string name="plant_registration_failed">식물 등록 실패 (API 연동 필요)</string>
    <string name="select_date">날짜 선택</string>
    <string name="registration_complete_message">등록이 완료되었어요\n%1$s 확인해보러 갈까요?</string>
    <string name="button_view_plant">보러가기</string>


    <string name="setting_back">뒤로가기</string>
    <string name="setting_user">사용자</string>
    <string name="setting_email">이메일</string>
    <string name="setting_category_notification">알림 설정</string>
    <string name="setting_notification">알림 수신 설정</string>
    <string name="setting_dnd">방해금지 시간 설정</string>
    <string name="setting_category_user">사용자 설정</string>
    <string name="setting_account">계정 / 정보 관리</string>
    <string name="setting_blocked">다른 사용자 관리</string>
    <string name="setting_category_etc">기타</string>
    <string name="setting_language">언어</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_delete">탈퇴하기</string>

    <string name="dnd_start_time">방해금지 시작 시간</string>
    <string name="dnd_end_time">방해금지 종료 시간</string>
    <string name="save">저장</string>

    <string name="language_selection">언어 선택</string>
    <string name="korean">한국어</string>
    <string name="english">English</string>
    <string name="apply">적용</string>

    <string name="my_plants">내 식물</string>
    <string name="see_more">더 보기</string>
    <string name="add_plant">식물 등록하기</string>
    <string name="recommended_items">추천 용품</string>
    <string name="notification_receive">알림 수신</string>

    <string name="label_nickname">별명</string>
    <string name="label_id">아이디</string>
    <string name="label_password">비밀번호</string>
    <string name="label_password_confirm">비밀번호 확인</string>

    <string name="logout_confirm_message">정말 로그아웃 하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="nickname">닉네임</string>
    <string name="unblock">차단 해제</string>

    <string name="toast_nickname_saved">닉네임 저장 완료</string>
    <string name="toast_enter_nickname">닉네임을 입력해주세요</string>
    <string name="toast_enter_passwords">비밀번호를 모두 입력해주세요</string>
    <string name="toast_password_changed">비밀번호가 변경되었습니다</string>

    <string name="toast_user_unblocked">%1$s 차단 해제됨</string>
    <string name="dialog_delete_account_confirm">정말 계정을 삭제하시겠습니까?\n이 작업은 되돌릴 수 없습니다.</string>

    <string name="toast_dnd_saved">설정이 저장되었습니다</string>
    <string name="enter_nickname">닉네임 입력</string>
    <string name="save_nickname">닉네임 저장</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="origin_password">기존 비밀번호</string>
    <string name="new_password">새 비밀번호</string>






</resources>